# copilot-sdk

.github/workflows/: cross-repo-issue-analysis.lock.yml  cross-repo-issue-analysis.md
cookbook/python/: error-handling.md  managing-local-files.md  multiple-sessions.md  persisting-sessions.md  pr-visualization.md
cookbook/python/recipe/: README.md  error_handling.py  managing_local_files.py  multiple_sessions.py  persisting_sessions.py  pr_visualization.py
docs/: custom-agents.md  getting-started.md
dotnet/src/: Session.cs  Types.cs
dotnet/test/: SessionTests.cs
go/: types.go
go/internal/e2e/: session_test.go
nodejs/: package.json
nodejs/src/: types.ts
nodejs/test/e2e/: session.test.ts
python/: pyproject.toml
python/copilot/: client.py  session.py  types.py
python/e2e/: test_mcp_and_agents.py  test_session.py  test_tools.py
test/harness/: package-lock.json  package.json
